# aim_assistant_msgs

./: CMakeLists.txt  package.xml
msg/: Pole.msg  PoleArray.msg
